src/test/ui/consts/const-fn-not-safe-for-const.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-fn-not-safe-for-const.rs:24:5
   |
LL |     random() //~ ERROR E0015
   |     ^^^^^^^^

error[E0013]: constant functions cannot refer to statics, use a constant instead
  --> $DIR/const-fn-not-safe-for-const.rs:30:5
   |
LL |     Y
   |     ^

error[E0013]: constant functions cannot refer to statics, use a constant instead
  --> $DIR/const-fn-not-safe-for-const.rs:35:5
   |
LL |     &Y
   |     ^^

error: aborting due to 3 previous errors

Some errors occurred: E0013, E0015.
For more information about an error, try `rustc --explain E0013`.
